# rules_linux

./: AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  RELEASING.md  go.mod  go.sum
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: ci.yml  release.yml  release_prep.sh
docs/: BUILD.bazel
e2e/smoke/: BUILD.bazel  MODULE.bazel
linux/: BUILD.bazel  defs.bzl  extensions.bzl  macros.bzl  providers.bzl  rootfs.bzl
linux/bootstrap/: BUILD.bazel  bootstrap.yaml  bootstrap_amd64.lock.json  bootstrap_amd64.yaml  bootstrap_arm64.lock.json  bootstrap_arm64.yaml  bootstrap_runtime_amd64.lock.json  bootstrap_runtime_amd64.yaml  bootstrap_runtime_arm64.lock.json  bootstrap_runtime_arm64.yaml  bootstrap_sysroot_amd64.lock.json  bootstrap_sysroot_amd64.yaml  bootstrap_sysroot_arm64.lock.json  bootstrap_sysroot_arm64.yaml  init  platform_transition.bzl
linux/initrd/: BUILD.bazel  initrd.bzl  strip_profiles.bzl
linux/iso/: BUILD.bazel  iso.bzl
linux/kernel/: BUILD.bazel  kernel_build.bzl  kernel_extract.bzl
linux/signing/: BUILD.bazel  signing.bzl
linux/tools/mkiso/: BUILD.bazel  main.go  mkiso_test.go
linux/tools/usi-signer/: BUILD.bazel  main.go  pki.go  signer_test.go
linux/tools/vmbuilder/: BUILD.bazel  main.go  vmbuilder_test.go
linux/tools/vmworker/: BUILD.bazel  build.go  main.go  vmworker_test.go  worker.go
linux/uki/: BUILD.bazel  uki.bzl
tests/: BUILD.bazel  bootstrap_test.go  bsdtar.bzl  initrd_test.go
tests/analysis/: BUILD.bazel  initrd_test.bzl  kernel_extract_test.bzl
tests/rootfs_test/: BUILD.bazel  test-app.service  test-worker.service  verify_tar.sh
tests/rootfs_test/assertions/: install_dest_and_symlinks.txt  install_empty_dirs.txt  install_files.txt  install_symlinks_only.txt  rootfs_composition.txt  systemd_service_custom_wanted_by.txt  systemd_service_disabled.txt  systemd_service_extra_symlinks.txt  systemd_service_no_binary.txt  systemd_service_with_binary.txt
