module(
    name = "rules_linux",
    version = "0.1.0",
    compatibility_level = 0,
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_distroless", version = "0.6.2")
bazel_dep(name = "ape", version = "1.1.0")

# Kernel build toolchains (CC toolchain provided by consumer's registered toolchain)
bazel_dep(name = "rules_flex", version = "0.4")
bazel_dep(name = "rules_bison", version = "0.4")
bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "rules_perl", version = "0.6.7")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_diskfs_go_diskfs",
    "com_github_foxboron_go_uefi",
)
