load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_go//go:def.bzl", "go_test")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//linux:defs.bzl", "STRIP_PROFILE_NONE", "initrd")
load(":bsdtar.bzl", "bsdtar_binary")

# --- Test: initrd rule converts a rootfs tar to cpio.zst ---

genrule(
    name = "test_file",
    outs = ["test.txt"],
    cmd = "echo 'vmtest content' > $@",
)

pkg_tar(
    name = "test_rootfs",
    srcs = [":test_file"],
)

initrd(
    name = "test_initrd",
    rootfs = ":test_rootfs",
    strip_profile = STRIP_PROFILE_NONE,
)

build_test(
    name = "initrd_build_test",
    targets = [":test_initrd"],
)

# --- Test: initrd with strip profile ---

initrd(
    name = "test_initrd_stripped",
    rootfs = ":test_rootfs",
    # Default strip_profile is STRIP_PROFILE_SERVER
)

build_test(
    name = "initrd_strip_build_test",
    targets = [":test_initrd_stripped"],
)

# --- Test: initrd content verification (decompresses cpio.zst and validates) ---

bsdtar_binary(name = "bsdtar")

go_test(
    name = "initrd_test",
    srcs = ["initrd_test.go"],
    data = [
        ":bsdtar",
        ":test_initrd",
        ":test_initrd_stripped",
        "//linux/bootstrap:initrd",
    ],
    env = {
        "BSDTAR": "$(rlocationpath :bsdtar)",
        "TEST_INITRD": "$(rlocationpath :test_initrd)",
        "TEST_INITRD_STRIPPED": "$(rlocationpath :test_initrd_stripped)",
        "BOOTSTRAP_INITRD": "$(rlocationpath //linux/bootstrap:initrd)",
    },
)

# --- Test: bootstrap kernel and initrd are valid artifacts ---

go_test(
    name = "bootstrap_test",
    srcs = ["bootstrap_test.go"],
    data = [
        "//linux/bootstrap:initrd",
        "//linux/bootstrap:kernel",
    ],
    env = {
        "BOOTSTRAP_KERNEL": "$(rlocationpath //linux/bootstrap:kernel)",
        "BOOTSTRAP_INITRD": "$(rlocationpath //linux/bootstrap:initrd)",
    },
)
