"""Bootstrap kernel and initrd for the kernel_build VM path.

Architecture-specific targets are suffixed with _amd64 or _arm64.
The public :kernel and :initrd aliases select the correct variant based on
the execution platform CPU (cfg = "exec" in kernel_build.bzl), so Apple
Silicon Macs get HVF-accelerated ARM64 VMs while x86_64 hosts use their
native architecture.

A platform transition forces rules_distroless deps to resolve under the
correct Linux platform regardless of the host (works cross-arch and on
macOS).

To regenerate lock files after editing manifests:
    bazel run @bootstrap_debian_amd64//:lock
    bazel run @bootstrap_debian_arm64//:lock
"""

load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//linux/initrd:initrd.bzl", "initrd")
load("//linux/initrd:strip_profiles.bzl", "STRIP_PROFILE_NONE")
load("//linux/kernel:kernel_extract.bzl", "kernel_extract")
load(":platform_transition.bzl", "platform_dep")

# ---------------------------------------------------------------------------
# Platform targets for transitioning rules_distroless deps
# ---------------------------------------------------------------------------

platform(
    name = "linux_amd64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

platform(
    name = "linux_arm64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
)

# Transition the distroless flat tars so their internal select() resolves
# correctly regardless of host platform (cross-arch or macOS).
platform_dep(
    name = "debian_flat_amd64",
    dep = "@bootstrap_debian_amd64//:flat",
    platform = ":linux_amd64",
)

platform_dep(
    name = "debian_flat_arm64",
    dep = "@bootstrap_debian_arm64//:flat",
    platform = ":linux_arm64",
)

# ---------------------------------------------------------------------------
# Shared: init script (architecture-independent)
# ---------------------------------------------------------------------------

pkg_tar(
    name = "init_tar",
    srcs = ["init"],
    mode = "0755",
    package_dir = "/",
    visibility = ["//visibility:private"],
)

# ---------------------------------------------------------------------------
# x86_64 (amd64) bootstrap
# ---------------------------------------------------------------------------

kernel_extract(
    name = "kernel_amd64",
    package = ":debian_flat_amd64",
    arch = "x86_64",
    visibility = ["//visibility:private"],
)

pkg_tar(
    name = "bootstrap_rootfs_amd64",
    visibility = ["//visibility:private"],
    deps = [
        ":debian_flat_amd64",
        "@rules_qemu//agent:agent_tar",
        ":init_tar",
    ],
)

initrd(
    name = "initrd_amd64",
    rootfs = ":bootstrap_rootfs_amd64",
    strip_profile = STRIP_PROFILE_NONE,
    visibility = ["//visibility:private"],
)

# ---------------------------------------------------------------------------
# ARM64 (aarch64) bootstrap
# ---------------------------------------------------------------------------

kernel_extract(
    name = "kernel_arm64",
    package = ":debian_flat_arm64",
    arch = "arm64",
    visibility = ["//visibility:private"],
)

pkg_tar(
    name = "bootstrap_rootfs_arm64",
    visibility = ["//visibility:private"],
    deps = [
        ":debian_flat_arm64",
        "@rules_qemu//agent:agent_tar",
        ":init_tar",
    ],
)

initrd(
    name = "initrd_arm64",
    rootfs = ":bootstrap_rootfs_arm64",
    strip_profile = STRIP_PROFILE_NONE,
    visibility = ["//visibility:private"],
)

# ---------------------------------------------------------------------------
# Public aliases: select by execution platform CPU
# ---------------------------------------------------------------------------

alias(
    name = "kernel",
    actual = select({
        "@platforms//cpu:aarch64": ":kernel_arm64",
        "//conditions:default": ":kernel_amd64",
    }),
    visibility = ["//visibility:public"],
)

alias(
    name = "initrd",
    actual = select({
        "@platforms//cpu:aarch64": ":initrd_arm64",
        "//conditions:default": ":initrd_amd64",
    }),
    visibility = ["//visibility:public"],
)
