load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

# Initrd creation rules

exports_files(
    ["initrd.bzl"],
    visibility = ["//docs:__pkg__"],
)

bzl_library(
    name = "initrd",
    srcs = ["initrd.bzl"],
    visibility = ["//visibility:public"],
    deps = [":strip_profiles"],
)

bzl_library(
    name = "strip_profiles",
    srcs = ["strip_profiles.bzl"],
    visibility = ["//visibility:public"],
)
