load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "mkiso_lib",
    srcs = ["main.go"],
    importpath = "github.com/molnett/rules_linux/linux/tools/mkiso",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_diskfs_go_diskfs//:go-diskfs",
        "@com_github_diskfs_go_diskfs//disk",
        "@com_github_diskfs_go_diskfs//filesystem",
        "@com_github_diskfs_go_diskfs//filesystem/iso9660",
    ],
)

go_binary(
    name = "mkiso",
    embed = [":mkiso_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "mkiso_test",
    srcs = ["mkiso_test.go"],
    embed = [":mkiso_lib"],
)
