load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "vmbuilder_lib",
    srcs = ["main.go"],
    importpath = "github.com/mikn/rules_linux/linux/tools/vmbuilder",
    visibility = ["//visibility:private"],
    deps = [
        "@rules_qemu//vm",
    ],
)

go_binary(
    name = "vmbuilder",
    embed = [":vmbuilder_lib"],
    visibility = ["//visibility:public"],
)
